--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>GIT урок2</h1>
+    <h1>GIT урок</h1>
     <p>новое изменение index.html</p>
+    <p>изменение номер 2</p>
 </body>
 </html>
